media queries and fixing overflow

--- a/css/mobilefirstv2.css
+++ b/css/mobilefirstv2.css
@@ -1,4 +1,5 @@
 .main-exchange___container .container {
+    display: flex;
     justify-content: center;
     margin: 0 auto;
 }
