--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,7 +1,9 @@
-.main-tables___container {
+.main-exchange___container .container {
     display: flex;
+    justify-content: space-around;
     width: 930px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .product-cards___container {
