--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,10 @@ main {
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
+}
 
+.main-tables___container {
+    scroll-snap-align: center;
 }
 
 .main-currency___table {
@@ -459,7 +462,6 @@ main {
 .plans-container___slider {
     display: flex;
     gap: 10px;
-    height: 316px;
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
